force-app/main/default/objects/Technology__c/fields/CountOfProjTech__c.field-meta.xml
<CustomField>
    <fullName>CountOfProjTech__c</fullName>
    <description>Here we r getting Total count of Child Records</description>
    <label>CountOfProjTech</label>
    <summaryForeignKey>Project_Technology__c.Technology__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>