force-app/main/default/objects/Technology__c/fields/Pitfalls__c.field-meta.xml
<CustomField>
    <fullName>Pitfalls__c</fullName>
    <label>Pitfalls</label>
    <type>TextArea</type>
</CustomField>