force-app/main/default/objects/Technology__c/fields/ProjectTechnologiesSum__c.field-meta.xml
<CustomField>
    <fullName>ProjectTechnologiesSum__c</fullName>
    <label>ProjectTechnologiesSum</label>
    <summarizedField>Project_Technology__c.Technology_Rating__c</summarizedField>
    <summaryForeignKey>Project_Technology__c.Technology__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>